# bach-duy-programming-class

./: .gitignore  .gitmodules
AI-chat-app/server/: .gitignore  activate.sh  apr13-fastapi.py  apr7-ollama.py  chat-cli.py  hello.py  mar25-chat.py  mar26.py  mar27-multimodals.py  mar27-notebook.ipynb  pyproject.toml  simple-client.html
BachDuyJava/: champions.json  from-java.txt  hi.txt
HelloJavaFx/: pom.xml
League-client-JavaFX/: README.md  pom.xml
docs/: 2pointers.docx  palindrome.docx  secret-message.txt
express-demo/: package-lock.json  package.json  server.js
fullstack-blog-app/: package.json  vps.md
hello-expressjs/: home.html  nov1_cookies.js  nov21_bcrypt.js  nov4_sessions_login.js  oct14_ejs.js  oct20_ejs.js  oct29_sessions.js  oct6_templating.js  package.json  pnpm-lock.yaml  sep24_express.js  sept22_hi_server.js  setp22_hi_server.js  test-my-server.http
hello-react/: GIT commands.txt  TODO.md  deploy to github page note.txt  index.html  package-lock.json  package.json  vite.config.js
javascript/: dec11_2_strings.js  dec11_arrays.js  dec11_strings.js  dec11_strings_ts.ts  dec13_functions.js  dec14_functions_async.js  dec2.js  dec29.js  dec29_objects_destructure.js  dec2_palindrome.ts  dec30-web.html  dec30-web.js  dec30_basic.js  dec9_es6.js  nov30-hiJS.js  style.css
learn-sqlite/: Movies.db  asian-countries-gnp.csv  duy-db.db  my-lol.db  nov25_create_insert.sql  oct15-intro-to-sql.sql  oct21-views-aggregate.sql  popular-languages.csv  rocky-duy.db  sql-6.sql  sql-backup1.sql  sql-ex1.sql  sql-ex6.sql  top10-asian-markets.csv  world.db
(+382 files in other folders)
